[gd_scene load_steps=99 format=3 uid="uid://ohwk4jm2gye2"]

[ext_resource type="Script" uid="uid://80lewptlordq" path="res://scripts/bug_bear.gd" id="1_1n8ge"]
[ext_resource type="Texture2D" uid="uid://l2o25ikck81j" path="res://assets/monsters/BugBear/bug_bear_idle.png" id="2_xm7bu"]
[ext_resource type="Texture2D" uid="uid://buun5kuibb1nt" path="res://assets/monsters/BugBear/bug_bear_E.png" id="3_m7ea6"]
[ext_resource type="Texture2D" uid="uid://ccg8pa1u0yd5u" path="res://assets/monsters/BugBear/bug_bear_N.png" id="4_w3fmr"]
[ext_resource type="Texture2D" uid="uid://b8eh5dwg6axoa" path="res://assets/monsters/BugBear/bug_bear_NE.png" id="5_k0xco"]
[ext_resource type="Texture2D" uid="uid://c33unwrpbtafj" path="res://assets/monsters/BugBear/bug_bear_S.png" id="6_o0h8i"]
[ext_resource type="Texture2D" uid="uid://b2x17f3egg8pq" path="res://assets/monsters/BugBear/bug_bear_SE.png" id="7_wxcax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m7ea6"]
atlas = ExtResource("2_xm7bu")
region = Rect2(0, 0, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3fmr"]
atlas = ExtResource("2_xm7bu")
region = Rect2(77, 0, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0xco"]
atlas = ExtResource("2_xm7bu")
region = Rect2(154, 0, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0h8i"]
atlas = ExtResource("2_xm7bu")
region = Rect2(231, 0, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxcax"]
atlas = ExtResource("2_xm7bu")
region = Rect2(308, 0, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdgc6"]
atlas = ExtResource("2_xm7bu")
region = Rect2(0, 114, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_oovsq"]
atlas = ExtResource("2_xm7bu")
region = Rect2(77, 114, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3i3n"]
atlas = ExtResource("2_xm7bu")
region = Rect2(154, 114, 77, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxkiu"]
atlas = ExtResource("3_m7ea6")
region = Rect2(0, 0, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4din"]
atlas = ExtResource("3_m7ea6")
region = Rect2(91, 0, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_odrs1"]
atlas = ExtResource("3_m7ea6")
region = Rect2(182, 0, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhfeg"]
atlas = ExtResource("3_m7ea6")
region = Rect2(273, 0, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_273lj"]
atlas = ExtResource("3_m7ea6")
region = Rect2(364, 0, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_dklpv"]
atlas = ExtResource("3_m7ea6")
region = Rect2(0, 137, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_swa41"]
atlas = ExtResource("3_m7ea6")
region = Rect2(91, 137, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljb6y"]
atlas = ExtResource("3_m7ea6")
region = Rect2(182, 137, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_188r4"]
atlas = ExtResource("3_m7ea6")
region = Rect2(273, 137, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0xpo"]
atlas = ExtResource("3_m7ea6")
region = Rect2(364, 137, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqv02"]
atlas = ExtResource("3_m7ea6")
region = Rect2(0, 274, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdscw"]
atlas = ExtResource("3_m7ea6")
region = Rect2(91, 274, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp2os"]
atlas = ExtResource("3_m7ea6")
region = Rect2(182, 274, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_clx82"]
atlas = ExtResource("3_m7ea6")
region = Rect2(273, 274, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi8il"]
atlas = ExtResource("3_m7ea6")
region = Rect2(364, 274, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2rf5"]
atlas = ExtResource("3_m7ea6")
region = Rect2(0, 411, 91, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0opa"]
atlas = ExtResource("4_w3fmr")
region = Rect2(0, 0, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wpxd"]
atlas = ExtResource("4_w3fmr")
region = Rect2(109, 0, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8qwx"]
atlas = ExtResource("4_w3fmr")
region = Rect2(218, 0, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ampa0"]
atlas = ExtResource("4_w3fmr")
region = Rect2(327, 0, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ielod"]
atlas = ExtResource("4_w3fmr")
region = Rect2(436, 0, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_oatfx"]
atlas = ExtResource("4_w3fmr")
region = Rect2(0, 144, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d86f"]
atlas = ExtResource("4_w3fmr")
region = Rect2(109, 144, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_c78i2"]
atlas = ExtResource("4_w3fmr")
region = Rect2(218, 144, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5ne4"]
atlas = ExtResource("4_w3fmr")
region = Rect2(327, 144, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr1k4"]
atlas = ExtResource("4_w3fmr")
region = Rect2(436, 144, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_miiau"]
atlas = ExtResource("4_w3fmr")
region = Rect2(0, 288, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fxbe"]
atlas = ExtResource("4_w3fmr")
region = Rect2(109, 288, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg4wj"]
atlas = ExtResource("4_w3fmr")
region = Rect2(218, 288, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkysh"]
atlas = ExtResource("4_w3fmr")
region = Rect2(327, 288, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp8hu"]
atlas = ExtResource("4_w3fmr")
region = Rect2(436, 288, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_igj5n"]
atlas = ExtResource("4_w3fmr")
region = Rect2(0, 432, 109, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkhif"]
atlas = ExtResource("5_k0xco")
region = Rect2(0, 0, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2clq"]
atlas = ExtResource("5_k0xco")
region = Rect2(91, 0, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie5w3"]
atlas = ExtResource("5_k0xco")
region = Rect2(182, 0, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbcgl"]
atlas = ExtResource("5_k0xco")
region = Rect2(273, 0, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx5ey"]
atlas = ExtResource("5_k0xco")
region = Rect2(364, 0, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn0oj"]
atlas = ExtResource("5_k0xco")
region = Rect2(0, 148, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_eklog"]
atlas = ExtResource("5_k0xco")
region = Rect2(91, 148, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjj3i"]
atlas = ExtResource("5_k0xco")
region = Rect2(182, 148, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkxb0"]
atlas = ExtResource("5_k0xco")
region = Rect2(273, 148, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc24s"]
atlas = ExtResource("5_k0xco")
region = Rect2(364, 148, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_w485l"]
atlas = ExtResource("5_k0xco")
region = Rect2(0, 296, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq470"]
atlas = ExtResource("5_k0xco")
region = Rect2(91, 296, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf35s"]
atlas = ExtResource("5_k0xco")
region = Rect2(182, 296, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyf6g"]
atlas = ExtResource("5_k0xco")
region = Rect2(273, 296, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqj8o"]
atlas = ExtResource("5_k0xco")
region = Rect2(364, 296, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxgll"]
atlas = ExtResource("5_k0xco")
region = Rect2(0, 444, 91, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfi3t"]
atlas = ExtResource("6_o0h8i")
region = Rect2(0, 0, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn7qd"]
atlas = ExtResource("6_o0h8i")
region = Rect2(114, 0, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dxa1"]
atlas = ExtResource("6_o0h8i")
region = Rect2(228, 0, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4r85"]
atlas = ExtResource("6_o0h8i")
region = Rect2(342, 0, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_eadkv"]
atlas = ExtResource("6_o0h8i")
region = Rect2(456, 0, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qy42"]
atlas = ExtResource("6_o0h8i")
region = Rect2(0, 151, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqow7"]
atlas = ExtResource("6_o0h8i")
region = Rect2(114, 151, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_os0m0"]
atlas = ExtResource("6_o0h8i")
region = Rect2(228, 151, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyayr"]
atlas = ExtResource("6_o0h8i")
region = Rect2(342, 151, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm6w5"]
atlas = ExtResource("6_o0h8i")
region = Rect2(456, 151, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibmnu"]
atlas = ExtResource("6_o0h8i")
region = Rect2(0, 302, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_3veyw"]
atlas = ExtResource("6_o0h8i")
region = Rect2(114, 302, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xhet"]
atlas = ExtResource("6_o0h8i")
region = Rect2(228, 302, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4a5e"]
atlas = ExtResource("6_o0h8i")
region = Rect2(342, 302, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7rbj"]
atlas = ExtResource("6_o0h8i")
region = Rect2(456, 302, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfr7g"]
atlas = ExtResource("6_o0h8i")
region = Rect2(0, 453, 114, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp2u7"]
atlas = ExtResource("7_wxcax")
region = Rect2(0, 0, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_xflgn"]
atlas = ExtResource("7_wxcax")
region = Rect2(98, 0, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibtx6"]
atlas = ExtResource("7_wxcax")
region = Rect2(196, 0, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk3cp"]
atlas = ExtResource("7_wxcax")
region = Rect2(294, 0, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcu8b"]
atlas = ExtResource("7_wxcax")
region = Rect2(392, 0, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_aet52"]
atlas = ExtResource("7_wxcax")
region = Rect2(0, 142, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qxl6"]
atlas = ExtResource("7_wxcax")
region = Rect2(98, 142, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsto7"]
atlas = ExtResource("7_wxcax")
region = Rect2(196, 142, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4egd"]
atlas = ExtResource("7_wxcax")
region = Rect2(294, 142, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3ybi"]
atlas = ExtResource("7_wxcax")
region = Rect2(392, 142, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu0vt"]
atlas = ExtResource("7_wxcax")
region = Rect2(0, 284, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwotm"]
atlas = ExtResource("7_wxcax")
region = Rect2(98, 284, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccurh"]
atlas = ExtResource("7_wxcax")
region = Rect2(196, 284, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohmek"]
atlas = ExtResource("7_wxcax")
region = Rect2(294, 284, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_anjfo"]
atlas = ExtResource("7_wxcax")
region = Rect2(392, 284, 98, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhxfh"]
atlas = ExtResource("7_wxcax")
region = Rect2(0, 426, 98, 142)

[sub_resource type="SpriteFrames" id="SpriteFrames_xm7bu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7ea6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3fmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0xco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0h8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxcax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdgc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oovsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3i3n")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxkiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4din")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odrs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhfeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_273lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dklpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swa41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljb6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_188r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0xpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqv02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdscw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp2os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clx82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi8il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2rf5")
}],
"loop": true,
"name": &"run_E",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0opa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wpxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8qwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ampa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ielod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oatfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d86f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c78i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5ne4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr1k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miiau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fxbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg4wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp8hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igj5n")
}],
"loop": true,
"name": &"run_N",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkhif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2clq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie5w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbcgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx5ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn0oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eklog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjj3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkxb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc24s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w485l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq470")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf35s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyf6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqj8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxgll")
}],
"loop": true,
"name": &"run_NE",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfi3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn7qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dxa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4r85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eadkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qy42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqow7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os0m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyayr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm6w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibmnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3veyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xhet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4a5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7rbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfr7g")
}],
"loop": true,
"name": &"run_S",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp2u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xflgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibtx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk3cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcu8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aet52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qxl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsto7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4egd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3ybi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu0vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwotm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccurh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohmek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anjfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhxfh")
}],
"loop": true,
"name": &"run_SE",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7ea6"]
size = Vector2(55, 56.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_wxcax"]
radius = 270.007

[node name="BugBear" type="CharacterBody2D"]
script = ExtResource("1_1n8ge")

[node name="AnimatedSprite2D_bug_bear" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_xm7bu")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.715511

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 26)
shape = SubResource("RectangleShape2D_m7ea6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 27)
shape = SubResource("CircleShape2D_wxcax")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
